fix: align import keystore vertically center

--- a/packages/neuron-ui/src/components/ImportKeystore/importKeystore.module.scss
+++ b/packages/neuron-ui/src/components/ImportKeystore/importKeystore.module.scss
@@ -1,7 +1,11 @@
 @import '../../styles/mixin.scss';
 
 .container {
-  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 30px;
+  right: 30px;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
